ADD: vsconfig, components and first basic logical.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,31 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@assets/*": [
-        "src/assets/*"
-      ],
-      "@c/*": [
-        "src/components/*"
-      ],
-      "@common/*": [
-        "src/common/*"
-      ],
-      "@hooks/*": [
-        "src/hooks/*"
-      ],
-      "@icon/*": [
-        "src/assets/svg/*"
-      ],
-      "@store/*": [
-        "src/store/*"
-      ],
-      "@view/*": [
-        "src/view/*"
-      ]
-    }
-  }
+    "baseUrl": "./src/"
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src/**/*"
+  ]
 }
