ADD modal comp, fix responsive - Finish feature

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "mememory",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src"
   },
   "browserslist": {
     "production": [
