--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
-  "name": "iseazy-frontend",
+  "name": "iseazy-frontend-challenge",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+  "description": "isEazy Frontend Challenge",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:chestofwonders/iseazy-frontend.git"
   },
+  "author": "Miguel Arroyo",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "webpack --mode development --env.CONFIG_ENV=development --progress --colors --watch",
+    "pro": "webpack --mode production --env.CONFIG_ENV=production --progress --colors"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-card-flip": "^1.1.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.10.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
+    "babel-plugin-transform-react-class-to-function": "^1.2.0",
+    "css-loader": "0.28.4",
+    "express": "^4.17.1",
+    "file-loader": "^6.2.0",
+    "path": "^0.12.7",
+    "redux-devtools-extension": "^2.13.9",
+    "style-loader": "0.18.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "browserslist": {
     "production": [
