--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "node-sass": "5.0.0",
     "react": "^17.0.1",
+    "react-redux": "7.2.6",
     "react-dom": "^17.0.1",
     "react-router-dom": "6.0.1",
     "react-scripts": "4.0.2",
