--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
-    "web-vitals": "^1.0.1"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "web-vitals": "2.1.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.5.2",
+    "@types/node": "16.18.11",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "15.6.1",
+    "eslint-plugin-promise": "6.1.1",
+    "react-scripts": "5.0.1",
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,6 +30,7 @@
   },
   "eslintConfig": {
     "extends": [
+      "standard",
       "react-app",
       "react-app/jest"
     ]
