--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "iseazy-frontend",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -15,25 +21,15 @@
     "@types/node": "16.18.11",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "eslint-config-prettier": "8.6.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-n": "15.6.1",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-promise": "6.1.1",
+    "prettier": "2.8.3",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "standard",
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
