--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start & npx tailwindcss -i ./src/index.css -o ./public/output.css --watch",
+    "build": "npx tailwindcss -i ./src/index.css -o ./public/output.css --watch & react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
