--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "react": "^18.2.0",
+    "animate.css": "^4.1.1",
+    "firebase": "^10.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
